# bwt

./: LICENSE.txt  README.md  SPECIFICATION.md  test-vectors.json  test-vectors.md
ocaml/: Makefile  README.md  bwt.ml  bwt.mli  bwt_test.ml  bwt_vectors.ml  dune  dune-project
perl5/: Changes  MANIFEST  Makefile.PL  README.md
perl5/lib/: BWT.pm
perl5/t/: 00_load.t  01_direct.t  02_vectors.t  pod.t
