(library
 (name bwt)
 (wrapped false)
 (modules :standard \ bwt_test bwt_vectors)
 (libraries digestif eqaf unix)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name bwt_test)
 (modules bwt_test)
 (deps test-vectors.json)
 (libraries bwt digestif yojson alcotest qcheck qcheck-alcotest))

(executable
 (name bwt_vectors)
 (modules bwt_vectors)
 (libraries bwt yojson))

(env
 (default
  (ocamlopt_flags
   (:standard -O2)))
 (coverage
  (flags
   (:standard -w -71))
  (ocamlopt_flags
   (:standard -O2))))
